--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,12 @@
   <meta charset="utf-8">
   <title>A2website</title>
   <base href="/">
-
+  <link rel="stylesheet" href="https://bootswatch.com/3/darkly/bootstrap.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <base href="/">
   <app-root></app-root>
 </body>
 </html>
